some more big changes

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -5,7 +5,7 @@
     justify-content: center;
     height:10vh;
     /**background-image: url(../assets/Campus_Aerial_View_2_blurry.jpeg);**/
-    background-color: #11244b;
+    background-color: black;
     padding-top: 10vh;
     
  }
