--- a/src/styles/TeamMember.css
+++ b/src/styles/TeamMember.css
@@ -29,8 +29,8 @@
     left: 0%;
     width: 28vw;
     height: 4.2vw;
-    background-color: #11244b; 
-    color: whitesmoke;
+    background-color: whitesmoke; 
+    color: black;
     line-height: 1px;
     border-top: none;  
     padding-bottom: 0.5%;
