--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 10vh;
   /** background-color: whitesmoke; **/
-  background-color :#091225;
+  background-color :black;
   
   display: flex;
   position: fixed;
@@ -26,7 +26,7 @@
 .navbar .leftSide img {
   width: 175px;
   height: 100px;
-  padding-left: 2vw;;
+  padding-left: 2vw;
   padding-top: 0vh;
 }
   
@@ -107,15 +107,6 @@
   
     .hiddenLinks {
       display: none;
-    }
-    .navbar #open .hiddenLinks {
-      display: none;
-    }
-    .navbar .rightSide{
-      display: none;
-    }
-    .navbar .leftside{
-      display: inherit;
     }
 
   }
