--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,32 +1,41 @@
 .footer {
     width: 100%;
-    height: 20vh;
-    background-color: #091225;
+    height: 25vh;
+    background-color: whitesmoke;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 10px;
+    
+    padding-top: 5vh;
+    padding-bottom: 7vh;
 
 
 }
 
 .footer h1{
-    color:whitesmoke;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color:black;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 500;
+}
+.footer h3{
+    color:black;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight:500;
+    text-align: left;
 }
 
 .footer .middle {
     justify-content: center;
     display: flex;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
 
 }
 .footer .left .socialMedia{
     justify-content: center;
     display: flex;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
 
 }
 .footer .middle .RWELogo img{
@@ -37,31 +46,40 @@
     width: 4vw;
 }
 
+.footer .right img{
+    width: 8vw;
+}
+
   
 .socialMedia svg {
-    color: whitesmoke;
-    margin: 20px;
-    font-size: 3.5vw;
+    color: black;
+    margin: 5px;
+    font-size: 2vw;
     cursor: pointer;
 
 }
-.socialMedia img {
-    width:10vw;
-    padding-left: 20px;
-    
+.socialMedia .linktree img {
+    width:2.25vw;
+    padding-top: 1vh;
+}
+.socialMedia .youtube img {
+    width:3.5vw;
+    padding-top: 1vh;
 }
 
 
   
 .footer p {
-    color: whitesmoke;
+    color: black;
     font-size: 1vw;
-    font-weight: lighter;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
 }
+
 
 .left, .middle, .right{
     flex: 1;
     text-align: center;
-    flex-direction: row;
+    flex-direction: column;
     color: whitesmoke;
 }
